2005-06-17  Not Zed  <NotZed@Ximian.com>

	* message-list.c (regen_list_regen): try a different cancellation
	test since we search iteratively now.
	(ml_regen_timeout): try thread-new, so we can run without blocking
	the loading of the next folder, so we can never be cancelled
	anyway.  duh.

2005-06-15  Not Zed  <NotZed@Ximian.com>

	* mail-ops.c (expunge_folder_expunge): call sync w/ expunge.

2005-06-12  Not Zed  <NotZed@Ximian.com>

	* mail-session.c (ms_get_service, ms_get_uri): implement overrides
	so that we can remap uri's from ours to internal ones, so that
	camel can access resources using static uris.

2005-06-11  Not Zed  <NotZed@Ximian.com>

	* message-list.c (message_list_copy): converted to use iterator.

	* em-folder-view.c (em_folder_view_mark_selected): convert to
	using iterator.
	(emfv_set_label): "
	(emfv_popup_add_sender): fix a messageinfo leak.
	(emfv_list_key_press): convert to iterator.

	* message-list.c (regen_list_regen): optimise hide hunk/deleted by
	not performing it using a search.
	(message_list_get_selected_iter): added new interface to get
	selected messages as an iterator.

2005-06-10  Not Zed  <NotZed@Ximian.com>

	* mail-ops.c (mail_send_message): take the source messageinfo
	instead of uid.
	(send_queue_send): use iterator & simplify code somewhat.
	(transfer_messages_transfer): removed the code which marked
	deleted stuff also seen.

	* em-folder-tree-model.c (em_folder_tree_model_set_folder_info):
	use camel_object_get interface to get the counts.  assume they're
	accurate now.

	** Fix for camel api changes.

2005-06-08  Not Zed  <NotZed@Ximian.com>

	* mail-component.c (view_changed_cb): make this run a timeout so
	we don't update too often and suck loads of cpu time.

2005-06-07  Andre Klapper <9016009@gmx.de>
	* mail.error.xml: Fixing typo (bug 306151)

2005-06-02  Not Zed  <NotZed@Ximian.com>

	* Evolution-Mail.idl: only let this be included once.

	* mail-component.c (mail_component_class_init): Setup a test