@@ -1,3 +1,7 @@
+2005-06-21  Not Zed  <NotZed@Ximian.com>
+
+	* em-format-html.c (emfh_gethttp): fixed for data-cache changes.
+
 2005-06-17  Not Zed  <NotZed@Ximian.com>
 
 	* message-list.c (regen_list_regen): try a different cancellation
